<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/settings_bg"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/settings_nav_bar_bg" android:layout_width="fill_parent"
                    android:layout_height="56.0dip">
        <Button android:textSize="18.0dip" android:textColor="@color/setting_blue_style"
                android:id="@+id/about_back" android:background="@null" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="17.0dip"
                android:drawableLeft="@drawable/settings_back_indicator" android:drawablePadding="8.0dip"
                android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/str_about" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/about_bg" android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:scaleType="fitXY">
        <TextView android:layout_gravity="center_horizontal" android:id="@+id/company_name_text1"
                   android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_marginBottom="15.0dip"
                   android:textColor="#ff000000"
                   android:textSize="12sp"
                   android:text="@string/company_name_string_padding"
                   android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
        <TextView android:layout_gravity="center_horizontal" android:id="@+id/company_name_text"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textColor="#ff000000"
                  android:textSize="12sp"
                  android:text="@string/company_name_string"
                  android:layout_above="@id/company_name_text1"
                  android:layout_centerHorizontal="true"/>
        <Button android:textSize="14.0dip" android:textColor="#ff4c4c4c" android:layout_gravity="center_horizontal"
                android:id="@+id/btn_outweb" android:background="@drawable/about_btn" android:layout_width="180.0dip"
                android:layout_height="40.0dip" android:layout_marginBottom="18.0dip"
                android:text="@string/str_about_outweb" android:layout_above="@id/company_name_text"
                android:layout_centerHorizontal="true"/>
        <Button android:textSize="14.0dip" android:textColor="#ff4c4c4c" android:layout_gravity="center_horizontal"
                android:id="@+id/btn_checkupdate" android:background="@drawable/about_btn" android:layout_width="180.0dip"
                android:layout_height="40.0dip" android:layout_marginBottom="9.0dip"
                android:text="@string/str_about_checkupdate" android:layout_above="@id/btn_outweb"
                android:layout_centerHorizontal="true"/>
        <Button android:textSize="14.0dip" android:textColor="#ff4c4c4c" android:layout_gravity="center_horizontal"
                android:id="@+id/btn_feedback" android:background="@drawable/about_btn" android:layout_width="180.0dip"
                android:layout_height="40.0dip" android:layout_marginBottom="9.0dip"
                android:text="@string/str_about_feedback" android:layout_above="@id/btn_checkupdate"
                android:layout_centerHorizontal="true"/>
        <Button android:textSize="14.0dip" android:textColor="#ff4c4c4c" android:layout_gravity="center_horizontal"
                android:id="@+id/btn_share" android:background="@drawable/about_btn"
                android:layout_width="180.0dip" android:layout_height="40.0dip" android:layout_marginBottom="9.0dip"
                android:text="@string/str_about_share" android:layout_above="@id/btn_feedback"
                android:layout_centerHorizontal="true"/>
        <TextView android:textSize="12.0dip" android:textColor="#ff999999"
                  android:id="@+id/app_version_text"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimens_about_version_layout_marginbottom"
                  android:layout_above="@id/btn_share" android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"/>
        <TextView android:textSize="@dimen/dimens_about_app_name_size" android:textColor="#ff71b313"
                  android:layout_gravity="center_horizontal" android:id="@+id/app_name_text"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginBottom="15.0dip" android:text="@string/app_name"
                  android:shadowColor="#19000000" android:shadowDy="6.0" android:shadowRadius="1.0"
                  android:layout_above="@id/app_version_text" android:layout_centerHorizontal="true"/>
        <LinearLayout android:gravity="center" android:layout_gravity="center"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:layout_weight="1.0"
                      android:layout_above="@id/app_name_text" android:layout_alignParentTop="true">
            <ImageView android:gravity="center" android:layout_gravity="center"
                       android:id="@+id/icon_image"
                       android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@drawable/img_about_app_icon" android:layout_centerHorizontal="true"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>