<?xml version="1.0" encoding="UTF-8"?>
<!--
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/exp_view_lin_layout" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:gravity="center"
	android:orientation="vertical" android:paddingLeft="1dp"
	android:paddingRight="1dp"
	android:paddingTop="4dp"
	>
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:layout_margin="2dip"
    android:background="@drawable/notify"
    android:padding="2dp" >

    <LinearLayout
        android:id="@+id/leftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangditianqi"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/local_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@drawable/weather04" />

    <LinearLayout
        android:id="@+id/rightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest"
                    android:textColor="#a9a9a9"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/highest_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1sp"
                    android:text="@string/h_temp"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowest"
                    android:textColor="#a9a9a9"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/lowest_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1sp"
                    android:text="@string/l_temp"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!--
                 <TextView android:id="@+id/currentTemp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" android:layout_marginLeft="2dp"
				android:text="@string/current_" android:textColor="#ffffff"
				android:textSize="30sp" />
        -->

        <TextView
            android:id="@+id/currentTemp"
         android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1sp"
                    android:text="@string/l_temp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp" />
    </LinearLayout>

</RelativeLayout><!-- </LinearLayout> -->
